--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -2,6 +2,72 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <div th:replace="blocks/head :: header"></div>
+
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <style>
+            /* The switch - the box around the slider */
+            .switch {
+                position: relative;
+                display: inline-block;
+                width: 60px;
+                height: 34px;
+                float: right;
+            }
+
+            /* Hide default HTML checkbox */
+            .switch input {
+                display: none;
+            }
+
+            /* The slider */
+            .slider {
+                position: absolute;
+                cursor: pointer;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background-color: #ccc;
+                -webkit-transition: .4s;
+                transition: .4s;
+            }
+
+            .slider:before {
+                position: absolute;
+                content: "";
+                height: 26px;
+                width: 26px;
+                left: 4px;
+                bottom: 4px;
+                background-color: white;
+                -webkit-transition: .4s;
+                transition: .4s;
+            }
+
+            input.default:checked + .slider {
+                background-color: #444;
+            }
+
+            input.primary:checked + .slider {
+                background-color: #2196F3;
+            }
+
+            input:checked + .slider:before {
+                -webkit-transform: translateX(26px);
+                -ms-transform: translateX(26px);
+                transform: translateX(26px);
+            }
+
+            /* Rounded sliders */
+            .slider.round {
+                border-radius: 34px;
+            }
+
+            .slider.round:before {
+                border-radius: 50%;
+            }
+
+        </style>
     </head>
     <body>
         <div class="container d-flex align-items-stretch">
@@ -11,16 +77,38 @@
             <!-- Page Content  -->
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h4>Meeting properties</h4>
+
                 <hr>
                 <a th:href="@{|/admin/log-download|}">Download log file</a>
                 <hr>
-                <p th:text="${lastLog}">
-                    <!--                <textarea class="form-control " rows="15" th:text="${lastLog}"-->
-                    <!--                          placeholder="Please write customer notes"></textarea>-->
-                    <!--                <div class="form-group">-->
-                    <!--                    <label for="exampleFormControlTextarea1">Example textarea</label>-->
-                    <!--                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="43"></textarea>-->
-                    <!--                </div>-->
+                <a href="/admin/logs" class="btn btn-info btn-lg">
+                    <span class="glyphicon glyphicon-refresh"></span> Refresh
+                </a>
+                <label class="switch ">
+                    <input type="checkbox" class="primary" onclick="enable(this)">
+                    <span class="slider round"></span>
+                </label>
+                <!--                    <input type="checkbox" checked data-toggle="toggle" onclick="enable(this)">-->
+                <script type="text/javascript">
+                    function enable(d) {
+                        if (d.interval) {
+                            clearInterval(d.interval);
+                        } else {
+                            document.getElementById('result-pre').style.visibility = 'hidden';
+                            d.interval = setInterval(function () {
+                                $.ajax({
+                                    url: '/admin/logs-ajax',
+                                    success: function (data) {
+                                        $('#result').html(data);
+                                    }
+                                });
+                            }, 1000);
+                        }
+                    }
+                </script>
+                <hr>
+                <div id="result"></div>
+                <pre id="result-pre" th:text="${lastLog}" style="width: 100%; height: 550px; overflow-y: scroll;"/>
             </div>
         </div>
     </body>
