--- a/src/main/resources/templates/blocks/navigation.html
+++ b/src/main/resources/templates/blocks/navigation.html
@@ -4,12 +4,12 @@
     <div class="p-4">
         <h1><a href="index.html" class="logo">Razykrashka <span>Admin Panel</span></a></h1>
         <ul class="list-unstyled components mb-5">
-            <li class="active">
-                <a href="#"><span class="fa fa-home mr-3"></span>Home</a>
-            </li>
+            <!--            <li class="active">-->
+            <!--                <a href="#"><span class="fa fa-home mr-3"></span>Home</a>-->
+            <!--            </li>-->
             <li>
                 <a href="#pageSubmenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle collapsed">
-                    <span class="fa fa-cogs mr-3"></span> Properties</a>
+                    <span class="fa fa-cogs mr-3"></span>Properties</a>
                 <ul class="list-unstyled collapse" id="pageSubmenu1" style="">
                     <li>
                         <a th:href="@{/admin/meeting-properties}"><span class="fa fa-graduation-cap mr-3"></span>Meeting</a>
@@ -19,26 +19,23 @@
                     </li>
                 </ul>
             </li>
-            <li>
-                <a rel="noopener noreferrer" target="_blank" href="/../time-setter"><span class="fa fa-calendar mr-3"></span>Times Setter</a>
-            </li>
-            <li>
-                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle collapsed">
-                    <span class="fa fa-sticky-note mr-3"></span> API</a>
-                <ul class="list-unstyled collapse" id="pageSubmenu" style="">
-                    <li>
-                        <a href="#">Page 1</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 2</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 3</a>
-                    </li>
-                </ul>
-            </li>
+            <!--            <li>-->
+            <!--                <a rel="noopener noreferrer" target="_blank" href="/../time-setter"><span class="fa fa-calendar mr-3"></span>Times Setter</a>-->
+            <!--            </li>-->
             <li>
                 <a th:href="@{/admin/logs}"><span class="fa fa-file-text-o mr-3"></span> Log</a>
+            </li>
+            <li>
+                <a href="#pageSubmenu2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle collapsed">
+                    <span class="fa fa-user-o mr-3"></span> Users</a>
+                <ul class="list-unstyled collapse" id="pageSubmenu2" style="">
+                    <li>
+                        <a th:href="@{/admin/users/info}"><span class="fa fa-graduation-cap mr-3"></span>Info</a>
+                    </li>
+                    <li>
+                        <a th:href="@{/admin/users/info}"><span class="fa fa-thumbs-down mr-3"></span> Black list</a>
+                    </li>
+                </ul>
             </li>
         </ul>
 
